# WTT

./: .travis.yml  CMakeLists.txt  README.md
cmake/: CheckCGALAPI.cmake  CodeCoverage.cmake  wtlib-config.cmake.in
data/disconnected_meshes/: two_objects.off
data/invalid_meshes/: quad_cube.off
data/randomized_meshes/: butterfly_mask_8_21.off  rnd_cut_ico_163_645.off  rnd_ico_12_42_162.off
data/sorted_subdivision_meshes/: bunny.off  dragon.off  torusknot-3.off
data/subdivided_meshes/: butterfly_test5_12_42.off  cube_8_26.off  cube_8_26_98.off  cut_ico_163_645.off  dragon_500_2000_8000_32000.off  hat_13_37.off  hat_13_37_121.off  ico_12_42.off  ico_12_42_162.off  ico_12_42_162_642.off  loop_test_close3_5_14.off  loop_test_close4_6_18.off  loop_test_close5_7_22.off  loop_test_close6_8_26.off  loop_test_open3_7_19.off  loop_test_open4_9_25.off  loop_test_open5_11_31.off  loop_test_open6_13_37.off  plane_4_9.off  raw_mesh_non_manifold_9_27.off  reg_bunny_6_18_66_258_1026_4098_16386.off  strip_12_36.off  strip_12_36_120.off  strip_16_48.off  strip_16_48_160.off  strip_64_192.off  strip_64_192_640.off  strip_8_24.off  strip_8_24_80.off  tetra_4_10.off  tetra_4_10_34.off  tetra_4_10_34_130.off  torus_12_48.off  torus_12_48_192.off  torus_9_36.off  torus_9_36_144.off  tri_3_6.off  tri_3_6_15.off
data/unsubdivided_meshes/: cube_8.off  cut_ico_163.off  dragon_500.off  hat_13.off  ico_12.off  plane_4.off  plane_7.off  strip_12.off  strip_15.off  strip_16.off  strip_64.off  strip_8.off  strip_9.off  torus_12.off  torus_15.off  torus_9.off  tri_3.off
examples/: define_a_wt_with_custom_lifting_steps.cpp  usage_of_butterfly_wavelet_transform.cpp  usage_of_loop_wavelet_transform.cpp
src/app/: CMakeLists.txt  add_noise_to_mesh.cpp  l2_error.cpp  sort_mesh.cpp  wavelet_analyze.cpp  wavelet_filter.cpp  wavelet_synthesize.cpp
src/include/: CMakeLists.txt
src/include/wtlib/: butterfly_wavelet_transform.hpp  loop_wavelet_transform.hpp  mesh_types.hpp  version.hpp.in  wavelet_mesh_operations.hpp  wavelet_operations.hpp
src/include/wtlib/ptq_impl/: butterfly_wavelet_operations.hpp  in_place_list_iterator_hash.hpp  loop_math_utils.hpp  loop_wavelet_operations.hpp  mesh_vertex_info.hpp  subdivision_modifier.hpp  vertex_classification.hpp  vertex_classification_mirror_mesh.hpp
src/test/: CMakeLists.txt  butterfly_analysis_operations_test.cpp  butterfly_synthesis_operations_test.cpp  loop_analysis_ops_test.cpp  loop_math_utils_test.cpp  loop_synthesis_ops_test.cpp  ptq_classify_vertices_test.cpp  ptq_subdivision_modifier_test.cpp  ptq_wavelet_transforms_test.cpp  wavelet_mesh_ops_test.cpp  wavelet_operations_test.cpp
src/test/include/: test_utils.hpp
src/wtt-demo/: CMakeLists.txt
src/wtt-demo/include/: action_panel.hpp  arcball_camera.hpp  control_panel.hpp  custom_mesh_types.hpp  glview_control_panel.hpp  input_prop.hpp  integer_setter.hpp  logger.hpp  mainwindow.hpp  message_box.hpp  modal_widget.hpp  opengl_widget.hpp  scene_object.hpp  threaded_gl_buffer_uploader.hpp  triangle_mesh_scene.hpp  wtt_manager.hpp
src/wtt-demo/resources/: resources.qrc
src/wtt-demo/resources/mesh/: bunny_1000.off  cube.off  tetrahedron_base.off  torus_base.off
src/wtt-demo/resources/qss/: action_panel.qss  glview_control_panel.qss  input_prop.qss  integer_setter.qss  message_box.qss  proc.qss  wt_type_setter.qss
src/wtt-demo/resources/shader/: triangle_mesh.fragment  triangle_mesh.vertex
src/wtt-demo/src/: action_panel.cpp  arcball_camera.cpp  control_panel.cpp  glview_control_panel.cpp  input_prop.cpp  integer_setter.cpp  main.cpp  mainwindow.cpp  message_box.cpp  modal_widget.cpp  opengl_widget.cpp  scene_object.cpp  threaded_gl_buffer_uploader.cpp  triangle_mesh_scene.cpp  wtt_manager.cpp
src/wtt-demo/uis/: action_panel.ui  control_panel.ui  input_prop.ui  integer_setter.ui  mainwindow.ui  mesh_info_label.ui  messagebox.ui
